update nos forms

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 
         {
 
-            formTest.style.right = "50%"
-            formTest.style.transform = "translateX(50%)"
+            formTest.style.top = "50%"
+
 
             formTest.style.transition = "0.85s ease-in-out"
             formTest.style.zIndex = "1"
@@ -163,12 +163,12 @@
 
         if (buttonTest.value == "fechar") {
 
-            formTest.style.right = "31%"
 
 
 
 
-            formTest.style.transform = "translateY(-100vh)"
+
+            formTest.style.top = "-20vh"
 
 
 
