--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
         {
 
             formTest.style.top = "50%"
+            formTest.style.left = "50%"
+            formTest.style.transform = "translateX(-50%)"
 
 
             formTest.style.transition = "0.85s ease-in-out"
